<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/setting_bg">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/ll_setting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/setting_main_bg"
                android:orientation="vertical"
                app:divider="?attr/setting_divider"
                app:dividerPadding="10dp"
                app:showDividers="middle|beginning|end">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/vg_bgm"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_bgm"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/key_bgm"
                        android:textColor="?attr/setting_text_color"
                        android:textSize="16sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.google.android.material.slider.Slider
                        android:id="@+id/slider_bgm"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        app:labelBehavior="gone"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="1"
                        app:layout_constraintStart_toEndOf="@id/tv_bgm"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintWidth_max="150dp"
                        app:thumbColor="@android:color/white"
                        app:trackColorActive="?attr/colorSecondary"
                        app:trackColorInactive="#ADADAD"
                        tools:value="0.3" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_sound"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/key_sound"
                        android:textColor="?attr/setting_text_color"
                        android:textSize="16sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.google.android.material.slider.Slider
                        android:id="@+id/slider_sound"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        app:labelBehavior="gone"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="1"
                        app:layout_constraintStart_toEndOf="@id/tv_sound"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintWidth_max="150dp"
                        app:thumbColor="@android:color/white"
                        app:trackColorActive="?attr/colorSecondary"
                        app:trackColorInactive="#ADADAD"
                        tools:value="0.3" />
                </androidx.constraintlayout.widget.ConstraintLayout>


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_vibrate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/vibrator_feedback"
                        android:textColor="?attr/setting_text_color"
                        android:textSize="16sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.google.android.material.switchmaterial.SwitchMaterial
                        android:id="@+id/switch_vibrate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="1"
                        app:layout_constraintStart_toEndOf="@id/tv_vibrate"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/btn_feedback"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_feedback"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/advise_feedback"
                        android:textColor="?attr/setting_text_color"
                        android:textSize="16sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="wrap_content"
                        android:layout_height="20dp"
                        android:src="@mipmap/indicator"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="1"
                        app:layout_constraintStart_toEndOf="@id/tv_feedback"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/btn_privacy_policy"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_privacy_policy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/privacy_policy"
                        android:textColor="?attr/setting_text_color"
                        android:textSize="16sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="wrap_content"
                        android:layout_height="20dp"
                        android:src="@mipmap/indicator"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="1"
                        app:layout_constraintStart_toEndOf="@id/tv_privacy_policy"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/btn_terms_service"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_terms_service"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/terms_service"
                        android:textColor="?attr/setting_text_color"
                        android:textSize="16sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="wrap_content"
                        android:layout_height="20dp"
                        android:src="@mipmap/indicator"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="1"
                        app:layout_constraintStart_toEndOf="@id/tv_terms_service"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/btn_contact_us"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_contact_us"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/contact_us"
                        android:textColor="?attr/setting_text_color"
                        android:textSize="16sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="wrap_content"
                        android:layout_height="20dp"
                        android:src="@mipmap/indicator"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="1"
                        app:layout_constraintStart_toEndOf="@id/tv_contact_us"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="?attr/setting_text_color"
                android:textSize="13sp"
                android:textStyle="bold"
                android:layout_marginStart="20dp"
                android:text="@string/more_our_game"
                />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_content"
                android:overScrollMode="never"
                android:background="?attr/setting_main_bg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>